--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@react-spring/web": "^9.7.3",
+    "@visx/mock-data": "^3.3.0",
+    "@visx/pattern": "^3.3.0",
+    "@visx/responsive": "^3.10.2",
+    "@visx/shape": "^3.5.0",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.6",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5"
   }
 }
